--- a/templates/catalog-view.html
+++ b/templates/catalog-view.html
@@ -39,6 +39,17 @@
 			 document.write('<div class="thread-sizer" style="display: none;"></div>')
 			</script>
 			{% for thread in threads %}
+				{% set bg_style = "bg-light" %}
+				{% set ns = namespace(bg_style="bg-light", text_style="text-primary") %}
+				{% if thread.tags %}
+					{% set ns.main_tag = thread.tags[0].name %}
+					{% if style_for_tag(ns.main_tag).get("bg_style") %}
+						{% set ns.bg_style = style_for_tag(ns.main_tag).get("bg_style") %}
+					{% endif %}
+					{% if style_for_tag(ns.main_tag).get("text_style") %}
+						{% set ns.text_style = style_for_tag(ns.main_tag).get("text_style") %}
+					{% endif %}
+				{% endif %}
 				<div class="thread border-top rounded">
 					{% if thread["media"] %}
 						<a href="{{ url_for("view_thread", thread_id=thread["id"]) }}">
@@ -46,8 +57,8 @@
 						</a>
 					{% endif %}
 					{% if thread["subject"] %}
-						<div class="bg-light p-2 border-left border-right">
-							<h5>{{ thread["subject"] }}</h5>
+						<div class="{{ "p-2 border-left border-right " + ns.bg_style }}">
+							<h5 class="{{ ns.text_style }}">{{ thread["subject"] }}</h5>
 						</div>
 					{% else %}
 						<div class="bg-light p-2 border-left border-right">
@@ -57,7 +68,7 @@
 					<div class="pb-2 pt-2 pl-4 pr-4 border-left border-right">
 						{{ thread["body"]|safe|truncate() }}
 					</div>
-					<div class="pt-1 bg-light border border-top-0 rounded-bottom">
+					<div class="{{ "pt-1 border border-top-0 rounded-bottom " + ns.bg_style }}">
 						<a href="{{ url_for("view_thread", thread_id=thread["id"]) }}" class="btn btn-dark m-2">View thread</a>
 					</div>
 				</div>
