Fix unclosed tag (why are browsers so forgiving?)

--- a/templates/catalog-view.html
+++ b/templates/catalog-view.html
@@ -73,6 +73,7 @@
 						<span class="{{ "mt-3 mr-2 float-right " + ns.text_style }}">
 							<i class="fas fa-comment"></i> {{ thread["num_replies"] }} 
 							<i class="fas fa-image"></i> {{ thread["num_media"] }}
+						</span>
 					</div>
 				</div>
 			{% endfor %}		
