--- a/templates/post-base.html
+++ b/templates/post-base.html
@@ -4,7 +4,7 @@
         <label for="subject">Subject</label>
         <input type="text" id="subject" name="subject" class="form-control">
     </div>
-    {% if get_slip() %}
+    {% if get_slip() and get_slip().is_admin or get_slip().is_mod %}
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="useslip" name="useslip" value="true">
         <label for="useslip" class="form-check-label">Post with slip</label>
