add font awesome as well

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,7 @@
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/vendor/fontawesome/all.css">
     {% block head %}{% endblock %}
     <title>Maniwani - {% block title %}{% endblock %}</title>
 </head>
