--- a/templates/catalog-view.html
+++ b/templates/catalog-view.html
@@ -41,47 +41,52 @@
         <script>
 			 document.write('<div class="thread-sizer" style="display: none;"></div>')
         </script>
-        {% for thread in threads %}
-        {% set bg_style = "bg-light" %}
-        {% set ns = namespace(bg_style="bg-light", text_style="text-body") %}
-        {% if thread.tags %}
-        {% set ns.main_tag = thread.tags[0].name %}
-        {% if style_for_tag(ns.main_tag).get("bg_style") %}
-        {% set ns.bg_style = style_for_tag(ns.main_tag).get("bg_style") %}
-        {% endif %}
-        {% if style_for_tag(ns.main_tag).get("text_style") %}
-        {% set ns.text_style = style_for_tag(ns.main_tag).get("text_style") %}
-        {% endif %}
-        {% endif %}
-        <div class="thread border-top rounded">
-            {% if thread["media"] %}
-            <a href="{{ url_for("threads.view", thread_id=thread["id"]) }}">
-            <img class="border-left border-right w-100 rounded-top" src="{{ url_for("upload.thumb",
-            media_id=thread["media"]) }}">
-            </a>
-            {% endif %}
-            {% if thread["subject"] %}
-            <div class="{{ "p-2 border-left border-right
-            " + ns.bg_style }}">
-            <h5 class="{{ ns.text_style }}">{{ thread["subject"] }}</h5>
-        </div>
-        {% else %}
-        <div class="bg-light p-2 border-left border-right">
-            <h5 class="text-muted">No subject</h5>
-        </div>
-        {% endif %}
-        <div class="pb-2 pt-2 pl-4 pr-4 border-left border-right">
-            {{ thread["body"]|safe|truncate() }}
-        </div>
-        <div class="{{ "pt-1 border border-top-0 rounded-bottom
-        " + ns.bg_style }}">
-        <a href="{{ url_for("threads.view", thread_id=thread["id"]) }}" class="btn btn-dark m-2">View thread</a>
-        <span class="{{ "mt-3 mr-2 float-right " + ns.text_style }}">
-        <i class="fas fa-comment"></i> {{ thread["num_replies"] }}
-        <i class="fas fa-image"></i> {{ thread["num_media"] }}
-        </span>
-    </div>
-</div>
+        {% for thread in threads %}	
+			{% set bg_style = "bg-light" %}
+			{% set ns = namespace(bg_style="bg-light", text_style="text-body") %}	
+			{% if thread.tags %}
+				{% set ns.main_tag = thread.tags[0].name %}
+				{% if style_for_tag(ns.main_tag).get("bg_style") %}
+					{% set ns.bg_style = style_for_tag(ns.main_tag).get("bg_style") %}
+				{% endif %}
+				{% if style_for_tag(ns.main_tag).get("text_style") %}
+					{% set ns.text_style = style_for_tag(ns.main_tag).get("text_style") %}
+				{% endif %}
+			{% endif %}
+			{% if thread.admin_post %}
+				{% set ns.bg_style = "bg-success" %}
+				{% set ns.text_style = "text-light" %}
+			{% endif %}
+			<div class="thread border-top rounded">
+				{% if thread["media"] %}
+					<a href="{{ url_for("threads.view", thread_id=thread["id"]) }}">
+						<img class="border-left border-right w-100 rounded-top" src="{{ url_for("upload.thumb",
+																					 media_id=thread["media"]) }}">
+					</a>
+				{% endif %}
+				{% if thread["subject"] %}
+					<div class="{{ "p-2 border-left border-right
+								" + ns.bg_style }}">
+						<h5 class="{{ ns.text_style }}">{{ thread["subject"] }}</h5>
+					</div>
+				{% else %}
+					<div class="{{ "p-2 border-left border-right " + ns.bg_style }}">
+						<h5 class="text-muted">No subject</h5>
+					</div>
+				{% endif %}
+				<div class="{{  "pb-2 pt-2 pl-4 pr-4 border-left border-right " + ns.bg_style }}">
+					<div class="{{ ns.text_style }}"
+						 {{ thread["body"]|safe|truncate() }}
+					</div>
+				</div>
+				<div class="{{ "pt-1 border border-top-0 rounded-bottom " + ns.bg_style }}">
+					<a href="{{ url_for("threads.view", thread_id=thread["id"]) }}" class="btn btn-dark m-2">View thread</a>
+					<span class="{{ "mt-3 mr-2 float-right " + ns.text_style }}">
+						<i class="fas fa-comment"></i> {{ thread["num_replies"] }}
+						<i class="fas fa-image"></i> {{ thread["num_media"] }}
+					</span>
+				</div>
+			</div>
 {% endfor %}
 </div>
 </div>
