--- a/templates/thread.html
+++ b/templates/thread.html
@@ -82,7 +82,7 @@
 																												media_id=post["media"]) }}" data-thumb="{{ url_for("upload.thumb", media_id=post["media"]) }}" data-id="{{
 																																																						post["media"] }}" class="img-animated" style="{{ ns.img_style }}">
 								{% elif post["media_ext"] == "webm" %}
-									<div data-id="{{ post["media"] }}" class="post-vid">
+									<div data-id="{{ post["media"] }}" class="post-vid" style="display: inline-block;">
 										<img src="{{ url_for("upload.thumb", media_id=post["media"]) }}" style="{{ ns.img_style }}" id="{{ "thumb-%d" % post["media"] }}">
 										<video loop preload="none" class="mb-0 pb-0" style="{{ "display: none; " + ns.img_style }}" id="{{ "vid-%d" % post["media"] }}">
 											<source src="{{ url_for("upload.file", media_id=post["media"]) }}" type="video/webm">
@@ -205,6 +205,8 @@
 			 var media_id = $(this).data("id")
 			 $("#spoiler-label-" + media_id).toggle()
 			 var vid = $("#vid-" + media_id)
+			 vid.data("old-opacity", vid.css("opacity"))
+			 vid.css("opacity", "1")
 			 vid.get(0).play()
 			 vid.get(0).onplay = function() {
 				 vid.toggle()
@@ -215,6 +217,7 @@
 			 $("#thumb-" + media_id).toggle()
 			 $("#spoiler-label-" + media_id).toggle()
 			 var vid = $("#vid-" + media_id)
+			 vid.css("opacity", vid.data("old-opacity"))
 			 vid.get(0).currentTime = 0
 			 vid.get(0).pause()
 			 vid.toggle()
