--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
-    <script src="/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <script src="/vendor/popperjs/umd/popper.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ static_resource("bootstrap/css/bootstrap.min.css") }}">
+    <script src="{{ static_resource("jquery/jquery-3.3.1.min.js") }}"></script>
+    <script src="{{ static_resource("popperjs/umd/popper.min.js") }}"></script>
+    <script src="{{ static_resource("bootstrap/js/bootstrap.min.js") }}"></script>
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="/vendor/fontawesome/all.css">
+    <link rel="stylesheet" href="{{ static_resource("fontawesome/all.css") }}">
 	{% block head %}{% endblock %}
     <title>Maniwani - {% block title %}{% endblock %}</title>
 </head>
