Fix unclosed div in catalog-view.html

--- a/templates/catalog-view.html
+++ b/templates/catalog-view.html
@@ -86,7 +86,7 @@
 					</div>
 				{% endif %}
 				<div class="{{  "pb-2 pt-2 pl-4 pr-4 border-left border-right " + ns.bg_style }}">
-					<div class="{{ ns.text_style }}"
+					<div class="{{ ns.text_style }}">
 						 {{ thread["body"]|safe|truncate() }}
 					</div>
 				</div>
