--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="{{ static_resource("bootstrap/css/bootstrap.min.css") }}">
+	<link rel="stylesheet" href="{{ static_resource("css/styling.css") }}">
     <script src="{{ static_resource("jquery/jquery-3.3.1.min.js") }}"></script>
     <script src="{{ static_resource("popperjs/umd/popper.min.js") }}"></script>
     <script src="{{ static_resource("bootstrap/js/bootstrap.min.js") }}"></script>
