--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,6 +9,6 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-{% import "catalog-view.html" as catalog_view %}
+{% import "catalog-view.html" as catalog_view with context %}
 {{ catalog_view.catalog_view(threads) }}
 {% endblock %}
