--- a/templates/catalog-view.html
+++ b/templates/catalog-view.html
@@ -41,8 +41,8 @@
 		 font-size: 6em;
 	 }
 	</style>
-	<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-	<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+	<script src="{{ static_resource("imagesloaded/imagesloaded.pkgd.min.js") }}"></script>
+	<script src="{{ static_resource("masonry/masonry.pkgd.min.js") }}"></script>
 	<div class="container-fluid catalog-padding">
 		<div id="grid" class="d-flex flex-wrap">
 			<script>
