--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% if get_slip() is none %}
 <div class="container">
     <div class="jumbotron">
-        <h1 class="display-4">Maniwani!</h4>
+        <h1 class="display-4">Maniwani!</h1>
             <p class="lead">An anonymous imageboard for the 21st century</p>
             <hr class="my-4">
             <p>If you're not sure what an imageboard is, or why you'd want to use one,
@@ -17,6 +17,6 @@
     </div>
 </div>
 {% endif %}
-{% import "catalog-view.html" as catalog_view %}
+{% import "catalog-view.html" as catalog_view with context %}
 {{ catalog_view.catalog_view(threads) }}
 {% endblock %}
