--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -32,8 +32,8 @@ media gallery
 
 
 </style>
-<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="{{ static_resource("imagesloaded/imagesloaded.pkgd.min.js") }}"></script>
+<script src="{{ static_resource("masonry/masonry.pkgd.min.js") }}"></script>
 {% endblock %}
 {% block navbar %}
 <a href="{{ url_for("threads.view", thread_id=thread_id) }}" class="nav-item nav-link">Back to thread</a>
