--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{{ static_resource("bootstrap/bootstrap.css") }}">
-	<link rel="stylesheet" href="{{ static_resource("css/styling.css") }}">
+	<link rel="stylesheet" href="{{ static_resource("css/maniwani.css") }}">
     <script src="{{ static_resource("jquery/jquery.min.js") }}"></script>
     <script src="{{ static_resource("popperjs/umd/popper.min.js") }}"></script>
     <script src="{{ static_resource("bootstrap/bootstrap.min.js") }}"></script>
