--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -1,6 +1,6 @@
 {%- extends "base.html" %}
 {% block title %}
-<title>Maniwani - reply to thread</title>
+reply to thread
 {% endblock %}
 {% block navbar %}
 <a href="{{ url_for("threads.view", thread_id=thread_id) }}" class="nav-item nav-link">Back to thread</a>
