Rename "images/videos" stats since we can upload non-images/videos

--- a/templates/thread.html
+++ b/templates/thread.html
@@ -33,7 +33,7 @@
 {% endblock %}
 {% block navbar_right %}
 	<span class="navbar-item navbar-text">Views: <span class="text-light mr-1">{{ num_views }}</span></span>
-	<span class="navbar-item navbar-text">Images/videos: <span class="text-light mr-1">{{ num_media }}</span></span>
+	<span class="navbar-item navbar-text">Attachments: <span class="text-light mr-1">{{ num_media }}</span></span>
 	<span class="navbar-item navbar-text">Posters: <span class="text-light mr-1">{{ num_posters }}</span></span>
 {% endblock %}
 {% block content %}
