--- a/templates/thread.html
+++ b/templates/thread.html
@@ -1,4 +1,9 @@
 {%- extends "base.html" %}
+{% block head %}
+	{% if config["USE_RECAPTCHA"] %}
+		<script src='https://www.google.com/recaptcha/api.js?render={{ config["RECAPTCHA_SITE_KEY"] }}'></script>
+	{% endif %}
+{% endblock %}
 {% block title %}
 	{% if posts[0]["subject"] != "" %}
 		{{ posts[0]["subject"] }}
