--- a/templates/new-thread.html
+++ b/templates/new-thread.html
@@ -7,12 +7,9 @@
 {% block title %}
 new thread
 {% endblock %}
-{% block navbar %}
-<a href="{{ url_for("boards.catalog", board_id=board_id) }}" class="nav-item nav-link">Catalog</a>
-{% endblock %}
 {% import "post-base.html" as post with context %}
 {% block content %}
 <div class="container">
-    {{ post.post_form(url_for("threads.submit"), "board", board_id, thread_op=True) }}
+    {{ post.post_form(url_for("threads.submit"), "board", board["id"], thread_op=True) }}
 </div>
 {% endblock %}
