--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,13 @@
     </script>
     <div id="site-nav" class="navbar-nav">
         {% block navbar %}{% endblock %}
+		{% if board is defined %}
+			<a href="{{ url_for("boards.catalog", board_id=board["id"]) }}" class="nav-item nav-link">/{{ board["name"] }}/ Catalog</a>
+		{% endif %}
         <a href="{{ url_for("boards.list") }}" class="nav-item nav-link">Boards</a>
         <a href="{{ url_for("slip.landing") }}" class="nav-item nav-link">Slip</a>
-        {% if board_id is not defined and board is not defined %}
+        {% if board is not defined %}
         <a href="{{ url_for("main.rules") }}" class="nav-item nav-link">Rules</a>
-        {% elif board_id is defined %}
-        <a href="{{ url_for("boards.rules", board_id=board_id) }}" class="nav-item nav-link">Rules</a>
         {% else %}
         <a href="{{ url_for("boards.rules", board_id=board.id) }}" class="nav-item nav-link">Rules</a>
         {% endif %}
