--- a/templates/post-view.html
+++ b/templates/post-view.html
@@ -104,12 +104,12 @@
 					<div class="col-auto">
 						<small class="text-secondary">Replies:</small>
 						{% for reply in post["replies"] %}
-							<a class="badge badge-secondary" href="{{ url_for_post(reply) }}">&gt;&gt;{{ reply }} </a>
+							<a class="badge badge-secondary post-reply" href="{{ url_for_post(reply) }}" data-post-id="{{ reply }}" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<i>Loading...</i>" data-loaded="false">&gt;&gt;{{ reply }} </a>
 						{% endfor %}
 					</div>
 				</div>
 			{% endif %}
-			<div class="row">
+			<div class="row post-body">
 				{{ post["body"]|safe }}
 			</div>
 		</div>
